--- a/src/webparts/reactShowItemsPart1/components/ReactShowItemsPart1.module.scss
+++ b/src/webparts/reactShowItemsPart1/components/ReactShowItemsPart1.module.scss
@@ -1,6 +1,6 @@
 @import '~@fluentui/react/dist/sass/References.scss';
 
-.entendimentoreact {
+.reactShowItemsPart1 {
   overflow: hidden;
   padding: 1em;
   color: "[theme:bodyText, default: #323130]";
